[package]
name = "bc"
version = "0.1.0"
authors = ["Alessio Giambrone <agiambrone@>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
chrono = "0.4"
sha2 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "2.0"
actix-rt = "1.0"
url = "2.1.1"
reqwest = "0.9.15"
uuid = { version = "0.8", features = [ "v4" ] }
# needed vendored version for Docker container
openssl-sys = { version = "0.9.58", features = ["vendored"] }
